--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Clear Completed
 </section>
 </main>
 <footer class="footer">
-DGM 6308 · Project 2 · My To-Do List (Modules + Exception Handling)
+DGM 6308 · Project 2 · My To-Do List (Modules and Errors)
 </footer>
 </body>
 </html>
